--- a/redirect-&-rewrites.conf
+++ b/redirect-&-rewrites.conf
@@ -42,9 +42,9 @@ http {
     }
 
 
-    ## (i) if there was error 403 display index.html in "root" directory
+    ## (i) if there is error 403 display index.html in "root" directory
 
-    # error_page 403 /index.html;
+    error_page 403 /index.html;
     location = /index.html {
       root html;
       allow all;
